# cg

Dijkstra_1/: DijkstraOnVTKImage copy.py  DijkstraOnVTKImage.py  KochanekBartelsSpline.py  dijkstra copy.py  dijkstra.py  taller dijkstran.rtf
Sinbad/: Sinbad.py  resources.cfg
Sinbad/resources/: Sinbad.material  sphere.stl
color_rectangles/: colorrectangles.py  fill_boxes.cxx  fill_boxes.py
escenas_3D_base_code/: Object.h  main.cxx
lines/: drawlines.py
robotic_arm/: CMakeLists.txt
robotic_arm/app/: CMakeLists.txt  RoboticArm.cxx  texture_homer.ppm
robotic_arm/lib/: CMakeLists.txt
robotic_arm/lib/PUJ_CGraf/: AmbientLight.cxx  AmbientLight.h  Camera.cxx  Camera.h  Controller.cxx  Controller.h  Cylinder.cxx  Cylinder.h  Light.cxx  Light.h  Object.cxx  Object.h  PPMImage.cxx  PPMImage.h  ParametricObject.cxx  ParametricObject.h  Plane.cxx  Plane.h  Sphere.cxx  Sphere.h  SphericalCamera.cxx  SphericalCamera.h  SpotLight.cxx  SpotLight.h  World.cxx  World.h
system_solar/: CMakeLists.txt  Controller.cxx  Controller.h  SolarSystem.cxx  SolarSystem.h  main.cxx  planets.json  simple.json
test_OpenGL/: OpenGLSample.ipynb  circleActive.py  simplescene.py
vtk_examples/: VTK-ellipseTestCrop.ipynb  testVtk.ipynb
